plugins
{
    id 'java'
}

java
{
    toolchain
    {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.jar
{
    manifest.attributes["Main-Class"] = "graphdivider.Main"
}

repositories
{
    mavenCentral()
}

dependencies
{
    // FlatLaf Swing Look & Feel (Light + Dark)
    implementation "com.formdev:flatlaf:3.6"
}

tasks.register('runJar', JavaExec)
{
	mainClass = 'graphdivider.Main'
	classpath = sourceSets.main.runtimeClasspath
	group = 'run'
}
